[package]
name = "neutron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
async-trait = "0.1.77"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net"] }
url = "2.5.0"
protobuf = "3.3.0"
nom = "7.1.3"
bytes = "1.5.0"
crc32fast = "1.3.2"
crc32c = "0.6.4"
serde_json = { version = "1.0.112", optional = true }
log = "0.4.20"
env_logger = "0.11.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
chrono = "0.4.33"

[build-dependencies]
protobuf-codegen = "3.3.0"
protobuf-parser = "0.1.3"

[features]
json = ["serde_json"]
